# heber-modelo

./: .babelrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.gradle.kts  gruntfile.js  index.html  justfile  latest  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.bat  tsconfig-compilation.json  tsconfig.json  versions.json  webpack.config.js
"0.0.26-SNAPSHOT"/: sitemap.xml
"0.0.26-SNAPSHOT"/LICENSE/: index.html
"0.0.26-SNAPSHOT"/termosGerais/: index.html
.github/: dependabot.yml
.github/workflows/: ci.yml
0.0.26-SNAPSHOT/: 404.html  index.html
0.0.26-SNAPSHOT/configuração/: index.html
0.0.26-SNAPSHOT/políticaPrivacidade/: index.html
0.0.27-SNAPSHOT/: 404.html  index.html  sitemap.xml
0.0.27-SNAPSHOT/LICENSE/: index.html
0.0.27-SNAPSHOT/configuração/: index.html
0.0.27-SNAPSHOT/políticaPrivacidade/: index.html
0.0.27-SNAPSHOT/search/: search_index.json
0.0.27-SNAPSHOT/termosGerais/: index.html
0.0.28-SNAPSHOT/: 404.html  index.html  sitemap.xml
0.0.28-SNAPSHOT/LICENSE/: index.html
0.0.28-SNAPSHOT/configuração/: index.html
0.0.29-SNAPSHOT/: 404.html  index.html  sitemap.xml
0.0.30-SNAPSHOT/: 404.html  index.html  sitemap.xml
0.0.31-SNAPSHOT/: 404.html  index.html  sitemap.xml
0.0.32-SNAPSHOT/: 404.html  index.html  sitemap.xml
0.0.33-SNAPSHOT/: 404.html  index.html  sitemap.xml
docs/: LICENSE.md  configuração.md  index.md  políticaPrivacidade.md  termosGerais.md
gradle/: libs.versions.toml
latest/: 404.html  index.html
(+228 files in other folders)
